--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -18,7 +18,7 @@
 }
 
 .header_content::before{
-    content: url('../../images/header_blur.png');
+    content: url('/assets/img/header_blur.png');
     z-index: 0;
     position: absolute;
     margin-top: 100px;
