--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,18 @@
     border-radius: 15px;
 }
 
+.product_card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border-radius: 12px;
+}
+
+.product_card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+}
+
+
 /* Animation AOS */
 [data-aos] {
     pointer-events: none;
