--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-
 /* Import Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap');
 
@@ -19,6 +18,7 @@
     border-radius: 15px;
 }
 
+/* Product Card Hover Effect */
 .product_card {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     border-radius: 12px;
@@ -30,14 +30,15 @@
     z-index: 2;
 }
 
-
 /* Animation AOS */
 [data-aos] {
     pointer-events: none;
 }
+
 .aos-animate {
     pointer-events: auto;
 }
+
 .aos-init[data-aos][data-aos].aos-animate {
     transform: unset;
 }
@@ -53,7 +54,7 @@
     }
 }
 
-.container-fluid--header{
+.container-fluid--header {
     max-width: 100%;
     overflow-x: hidden;
 }
@@ -85,8 +86,6 @@ body {
     background-color: var(--background);
 }
 
-a{
+a {
     text-decoration: none;
 }
-
-
